# client

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  go.work.sum  package-lock.json  package.json  wails.json
client/: package-lock.json  package.json
client/resources/data/: application.json
client/src/: index.html  index.js
data/application/: languages.json
resources/data/: application.json
resources/languages/: english.json  vietnamese.json
src/: application.go  backend.go  build.go  frontend.go  frontend_builder.go  go.mod  go.sum  index.html  index.js  main.go  main.rs  tauri.conf.json  wails.json
src/css/: global.css
src/css/src/: global.scss
src/frontend/src/: index.html  index.js  index.scss
src/frontend/src/css/: global.scss  variables.scss
src/frontend/src/js/: global.js  update_checker.js
src/frontend/wailsjs/go/main/: Application.d.ts  Application.js
src/js/: global.js
src/modules/: mod.rs
src/modules/backend/: mod.rs
src/modules/frontend/: mod.rs
src/modules/frontend/application/: mod.rs
src/modules/frontend/starting/: mod.rs
src/modules/global/: variables.rs
src/modules/utilities/: _file.rs  json.rs  mod.rs
src/ui/: index.html  index.js  style.scss
src/ui/src/: index.js  style.scss
