[package]
name = "mozuli"
description = "A Discord-like chatting application that enables you to share your thoughts with other people."
version = "1.0.0"
edition = "2021"
homepage = "https://mozuli.deta.dev"
repository = "https://github.com/Mozuli/client"
license = "MIT"
authors = ["Mozuli"]

[profile.dev]
opt-level = 0
debug = 2
strip = "none"
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "unwind"
incremental = true
codegen-units = 256
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1

[dependencies]
serde_json = "1.0.85"
reqwest = {version = "0.11.12", features = ["blocking", "stream"]}
tauri = {version = "1.1.1", features = ["clipboard", "dialog", "notification", "system-tray"]}